# ai_assistant_parsers_core

./: .gitignore  README.rst  pyproject.toml
docs/source/: api.rst  conf.py  index.rst
examples/custom_selenium_fetchers/: msu.py
examples/parsers/: journal.py
examples/parsers/domain/: actual_art.py  chebyshev.py  ci.py  kantiana.py  kantiana_programs.py  law.py  nabokov_museums.py  online.py  pr.py
examples/parsers/multiple_domains/: journal.py
examples/parsers/page/: abiturient_main.py
examples/refiners/: clean_aside.py  restructure_tables.py
scripts/: mkinit.py
src/ai_assistant_parsers_core/: magic_url.py  markdown_converter.py  turn_html_into_markdown.py
src/ai_assistant_parsers_core/cli/: __init__.py  __main__.py
src/ai_assistant_parsers_core/cli/commands/: __init__.py  parse_many_.py  parse_one.py  parse_one_.py
src/ai_assistant_parsers_core/cli/functions/: __init__.py  parsing.py
src/ai_assistant_parsers_core/cli/utils/: __init__.py  parsers.py
src/ai_assistant_parsers_core/common_utils/: beautiful_soup.py  magic_path.py  magic_url.py  parse_url.py  universal_clean_html.py
src/ai_assistant_parsers_core/fetchers/: __init__.py  abc.py
src/ai_assistant_parsers_core/fetchers/impls/: __init__.py  aiohttp.py  api.py  playwright.py  selenium.py
src/ai_assistant_parsers_core/parsers/: __init__.py  abc.py  simple_find_domain_base.py  simple_find_page_base.py  simple_select_domain_base.py  simple_select_page_base.py
src/ai_assistant_parsers_core/parsers/base/: __init__.py  simple_find_domain.py  simple_find_page.py  simple_select_domain.py  simple_select_page.py
src/ai_assistant_parsers_core/parsers/impls/: __init__.py  universal.py
src/ai_assistant_parsers_core/parsers/mixins/: __init__.py  base_query.py  base_query_mixin.py  domain.py  find_query.py  page.py  select_query.py  simple_domain.py  simple_find.py  simple_select.py
src/ai_assistant_parsers_core/parsers/utils/: __init__.py  clean_blocks.py  restructure_blocks.py
src/ai_assistant_parsers_core/refiners/: __init__.py  abc.py
src/ai_assistant_parsers_core/refiners/impls/: __init__.py  clean.py  clean_post_parsing_refiner.py  default.py  restructure.py  restructure_post_parsing_refiner.py
src/ai_assistant_parsers_core/turn_html_into_markdown/: __init__.py
tests/parsers/: test_domain_mixin.py  test_page_mixin.py
