[tool.poetry]
name = "ai_assistant_parsers_core"
version = "0.24.5"
description = "AI Assistant Parsers Core - это ядро библиотеки, предоставляющее набор общих абстрактных классов и утилит для разработки парсеров, специализированных под различные высшие учебные заведения (ВУЗы)."
authors = ["LEv145", "AI Assistant"]
readme = "README.rst"
packages = [{include = "ai_assistant_parsers_core", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.12.3"
tldextract = "^5.1.2"
html5lib = "^1.1"
aiohttp = "^3.10.10"
fake-headers = "^1.0.2"
asyncclick = "^8.1.7.2"
selenium = "^4.25.0"
charset-normalizer = "^3.4.0"
aiohttp-retry = "^2.9.1"

[tool.poetry.group.dev.dependencies]
mkinit = "^1.1.0"
black = "^24.8.0"
pylint = "^3.2.7"
sphinx = "7.4.7"
furo = "^2024.8.6"
sphinx-rtd-theme = "^2.0.0"
sphinx-autoapi = "^3.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
